Modify dropdown-content class to include max-height of 500px to prevent overflow.

--- a/src/components/Elements/DropDownList.css
+++ b/src/components/Elements/DropDownList.css
@@ -42,7 +42,8 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 180px;
+  max-height: 500px;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 2;
